
4002	2015-11-23	Kevin Kamel <kamelkev@mailermailer.com>
	* Update POD within Inliner.pm such that it generates more consistent documentation for CPAN/GitHub
	* Set URI flag allowing urls containing leading dots to be handled correctly
	* Extend support for foreign character sets
		- implement charset detection algorithm, roughly based off of HTML5 W3C specification
		- implement character encoding/decoding based upon detected charset
		- implement fallback mode for when no charset is detected, leverage Encoding::FixLatin if available
		- add tests for exercising new charset related features
		- update documentation regarding new methods to support foreign charsets
	* Add reference to contributor Dave Gray (cpan@doesntsuck.com) to contributors section
	* Add reference to contributor Chelsea Rio (chelseario@gmail.com) to contributors section
	* Add new TreeBuilder configuration method, which ensures all instances are configured identically
	* Remove all entity handling intentionally or unintentionally done, retain original state of all read chars
		- Modify configuration of all TreeBuilder instances, remove all entity decoding done during parsing
		- Modify configuration of TreeBuilder output, skip calls for entity encoding
		- strip all documentation and argument handling related to entity encoding
		- All entity encoding is now the responsibility of the caller
	* Update MANIFEST to reference all added tests/assets
	* Fix minor formatting issues within some tests/assets
        * Address concerns raised by CPAN RT96414, conditionally test for connectivity instead of outright failing

4003	2015-12-16	Kevin Kamel <kamelkev@mailermailer.com>
	* Resolve charset sniffing issue
		- invalid charset present within the document would cause charset sniffing to end prematurely
		- invalid charset present within the document would cause Inliner to die during the decode phase
	* Resolve issue whereby a TreeBuilder instance was not configured as expected