@@ -155,12 +155,8 @@ METHODS
     time. In order to receive back content feedback you must perform
     inlinify first
 
-Sponsor
-    This code has been developed under sponsorship of MailerMailer LLC,
-    http://www.mailermailer.com/
-
 AUTHOR
-     Kevin Kamel <kamelkev@mailermailer.com>
+     Kevin Kamel <kamelkev@underprint.com>
 
 CONTRIBUTORS
      Dave Gray <cpan@doesntsuck.com>
@@ -169,6 +165,5 @@ CONTRIBUTORS
      Chelsea Rio <chelseario@gmail.com>
 
 LICENSE
-    This module is Copyright 2015 Khera Communications, Inc. It is licensed
+    This module is Copyright 2017 Khera Communications, Inc. It is licensed
     under the same terms as Perl itself.
-
