@@ -5,6 +5,7 @@ use lib qw( ./lib ../lib );
 use Test::More;
 use Cwd;
 use CSS::Inliner;
+use charnames ':full';
 
 plan(tests => 3);
 
