@@ -237,3 +237,8 @@
 		- invalid charset present within the document would cause charset sniffing to end prematurely
 		- invalid charset present within the document would cause Inliner to die during the decode phase
 	* Resolve issue whereby a TreeBuilder instance was not configured as expected
+
+4006	2017-07-16	Kevin Kamel <kamelkev@underprint.com>
+	* Update description indicating that development is currently suspended due to the MailerMailer LLC sale
+	* Apply patch from Nigel Metheringham which silences warnings under Perl 5.26
+	* Apply patch from Father Chrysostomos which avoids install issues with Perl 5.10
